# vie-handwritten

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
configs/: debug.yaml  default.yaml  line.debug.yaml  line.yaml  openvino.yaml  word.debug.yaml  word.yaml
data/charset/: vietnamese.txt
demo/: README.md  line-segment.py  paragraph-detect.py  pyproject.toml
demo/models/: .gitkeep
demo/src/form_ocr/: __init__.py  __main__.py  app.py  style.css
demo/src/form_ocr/domain/: records.py  template.py
demo/src/form_ocr/services/: batch.py  crop.py  export.py  ov_service.py  recognize.py
demo/src/form_ocr/ui/: batch_view.py  canvas.py  field_list.py  results_view.py  wizard.py
labs/: gt-editor.py
reports/debug/: report.json
src/converter/: __init__.py  bench_accuracy.py  bench_perf.py  cli.py  config.py  data.py  decode.py  export.py  quantize.py  runtime.py
src/gui/: README.md  __init__.py  __main__.py  app.py  content_view.py  image_list.py  info_panel.py  model_service.py  segment_service.py  style.css
src/vie_handwritten/: __init__.py  charset.py  cli.py  config.py  ctc.py  dataset.py  debug.py  eval.py  evaluate.py  kenlm.py  lm.py  lm_decode.py  metrics.py  model.py  pipeline.py  postprocess.py  preprocess.py  segment.py  text_norm.py  train.py  trainer.py  tune.py  utils.py
