[project]
name = "vie-handwritten"
version = "0.1.0"
description = "Vietnamese handwritten text OCR with CRNN (CNN → BiLSTM → Linear → CTC)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensorflow>=2.16,<2.20; sys_platform == 'darwin'",
    "tensorflow>=2.16; sys_platform != 'darwin'",
    "keras-hub>=0.17",
    "tensorflow-metal>=1.1.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "opencv-python>=4.10",
    "scikit-learn>=1.5",
    "scikit-image>=0.24",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "editdistance>=0.8",
    "tqdm>=4.66",
    "tensorflow[and-cuda]>=2.19.1; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
vie-ocr = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vie_handwritten"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
