[project]
name = "vie-handwritten"
version = "0.1.0"
description = "Vietnamese handwritten text OCR with CRNN (CNN → BiLSTM → Linear → CTC)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensorflow[and-cuda]>=2.19.1",
    "keras-hub>=0.17",
    "opencv-python>=4.10",
    "scikit-image>=0.24",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "editdistance>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
vie-ocr = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vie_handwritten"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
