[project]
name = "vie-handwritten"
version = "0.1.0"
description = "Vietnamese handwritten text OCR with CRNN (CNN → BiLSTM → Linear → CTC)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensorflow[and-cuda]>=2.19.1",
    "keras-hub>=0.17",
    "opencv-python>=4.10",
    "scikit-image>=0.24",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "editdistance>=0.8",
    # Post-processing: LM-fused CTC beam search decoding.
    "pyctcdecode>=0.5.0",
    "kenlm",
    "underthesea>=9.5.0",
    "matplotlib>=3.11.0",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
gui = [
    "pygobject>=3.50",
]

# kenlm has no PyPI wheel; build the query bindings from the vendored submodule.
[tool.uv.sources]
kenlm = { path = "third_party/kenlm" }

[tool.uv.workspace]
members = [
    "demo",
]

# pyctcdecode 0.5.0 declares numpy<2.0, but TensorFlow 2.19 needs numpy>=2.1.
# pyctcdecode only uses basic numpy ops and works fine on numpy 2.x, so relax it.
[tool.uv]
override-dependencies = ["numpy>=2.1.0"]

[project.scripts]
vie-ocr = "vie_handwritten.cli:main"
vie-ocr-gui = "gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vie_handwritten", "src/gui"]

[tool.hatch.build.targets.wheel.force-include]
"src/gui/style.css" = "gui/style.css"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
